--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,23 +1,81 @@
+/* Main Button Style */
 .big-button {
-    width: 170px; /* Adjust width */
-    height: 250px; /* Adjust height */
-    font-size: 2rem; /* Adjust font size */
+    width: 170px;
+    height: 250px;
+    font-size: 2rem;
 }
 .big-icon {
-    font-size: 50px; /* Adjust size as needed */
+    font-size: 50px;
 }
 body {
     background-image: url('../images/Untitled-1.png');
-    background-color: rgb(192, 192, 192); /* Path to your image */
-    background-size: cover;         /* Ensures the image covers the entire page */
-    background-position: center;    /* Centers the image */
-    background-repeat: no-repeat;   /* Prevents the image from repeating */
-    background-attachment: fixed;   /* Keeps the background fixed on scroll */
+    background-color: rgb(192, 192, 192);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
-/* Modal Custom Styles */
+
+/* Card Styles for Notes */
+.note-card {
+    background-color: #ffffff;
+    border-radius: 8px;
+    padding: 20px;
+    margin-bottom: 20px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    border-left: 5px solid;
+    width: 170px;
+    height: 250px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+/* Title and Text Styles */
+.note-title {
+    font-size: 1.25rem;
+    font-weight: 600;
+    color: #333;
+}
+.note-description {
+    font-size: 1rem;
+    color: #666;
+    margin-bottom: 10px;
+}
+
+/* Styling for the priority indicator */
+.note-priority {
+    font-weight: 500;
+    font-size: 0.9rem;
+    padding: 3px 8px;
+    border-radius: 5px;
+    color: #fff;
+    margin-top: 10px; /* Space between description and priority */
+}
+
+/* Priority Color Styles */
+.note-priority.extreme-priority {
+    background-color: #ff4d4f;
+    border-color: #ff4d4f;
+}
+.note-priority.high-priority {
+    background-color: #ff7f50;
+    border-color: #ff7f50;
+}
+.note-priority.medium-priority {
+    background-color: #ffd700;
+    border-color: #ffd700;
+}
+.note-priority.low-priority {
+    background-color: #32cd32;
+    border-color: #32cd32;
+}
+
+/* Modal Styles */
 .modal-content {
-    background-color: #ffffff; /* Light background */
-    border-radius: 8px; /* Rounded corners */
+    background-color: #ffffff;
+    border-radius: 8px;
     padding: 20px;
 }
 
@@ -31,7 +89,6 @@ body {
     border-top: none;
 }
 
-/* Form input fields and button styles */
 .form-control {
     border-radius: 5px;
     margin-bottom: 0px;
